--- a/src/index.css
+++ b/src/index.css
@@ -180,6 +180,9 @@ input[type="checkbox"] {
   .stats {
     font-size: 1.4rem;
   }
+  h1 {
+    font-size: 3rem;
+  }
 }
 
 @media (max-width: 400px) {
