List Display Fix

--- a/src/index.css
+++ b/src/index.css
@@ -174,7 +174,8 @@ input[type="checkbox"] {
   }
 
   .list ul {
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    display: flex;
+    flex-direction: column;
     font-size: 1.6rem;
   }
   .stats {
@@ -194,7 +195,8 @@ input[type="checkbox"] {
   }
 
   .list ul {
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    display: flex;
+    flex-direction: column;
     font-size: 1.6rem;
   }
   .stats {
